@@ -1,11 +1,15 @@
+
 all:
-	@echo "You must use 'make windows' or 'make unix'."
+	@echo "You must use 'make windows' or 'make linux'."
 	@echo "'make unix' is broken for now."
 
 windows:
 	$(CSC) /unsafe /out:codegen.exe /recurse:*.cs
 	./codegen gtkapi.xml
 
+linux:
+	mcs --unsafe -o codegen.exe -r System.Xml.dll *.cs
+	mono ./codegen.exe gtkapi.xml
+
 unix:
 	@echo "'make unix' is broken for now."
-
