@@ -1,3 +1,8 @@
+2002-03-02  Mike Kestner <mkestner@speakeasy.net>
+
+	* makefile : add linux build.
+	* generator/makefile : add linux build.
+
 2002-02-19  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/BoxedGen.cs : Add ctor and method generation.
